@@ -287,6 +287,7 @@ wrong, please let me know.
 * Sergio Guzman
 * Shad Lords
 * Simon Beale
+* sq5bpf
 * Stanley Hopcroft
 * Stefan Rompf
 * Stefan Schurtz
